# ContactAngle

./: CMakeLists.txt  ContactAngle  ContactAngle.cpp  ContactAngle.py  Copyright.txt  LICENSE.md  MainFrame.cpp  MainFrame.h  Makefile  README  Readme.md  Readme.txt  config.h.in  data.txt  fit.cpp  fit.h  fit.py  main.cpp  rotated.avi  test_fit.txt
C++/: .gitignore  CMakeLists.txt  ContactAngle.wxg  Copyright.txt  MainFrame.cpp  MainFrame.h  Makefile  MyFrame.cpp  MyFrame.h  fit.cpp  fit.h  main.cpp
docs/: Building_from_source.org  Building_from_source.wiki  HowToBuild.md  Internals.md  Makefile  Usage.md  Usage.org  Usage.wiki  default.css  footer.inc  header.inc  index.org  index.wiki  settings.el
samples/: rotated.avi
